...
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:id="@+id/loginButton"
        android:background="@drawable/login_button"
        android:textColor="@color/colorTextIcons"
        android:textSize="20sp"
        android:layout_above="@+id/topScoresButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
...
